# ruipiresc-python-wraplite

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  package-publish.yml  python-publish.yml  release-publish.yml
wraplite/: __init__.py  __version__.py  database.py  exceptions.py  table.py
