[bumpversion]
current_version = v0.2.1-dev9
commit = True
tag = False
parse = v(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	v{major}.{minor}.{patch}-{release}{build}
	v{major}.{minor}.{patch}

[metadata]
description-file = README.md

[bumpversion:part:release]
optional_value = prod
first_value = dev
values = 
	dev
	prod

[bumpversion:file:./wraplite/__version__.py]
search = version: {current_version}
replace = {new_version}
